feat/1 - added entities (general)

--- a/src/Presentation/DotnetProjectBoilerplate.ConsoleApp/DotnetProjectBoilerplate.ConsoleApp.csproj
+++ b/src/Presentation/DotnetProjectBoilerplate.ConsoleApp/DotnetProjectBoilerplate.ConsoleApp.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../../Core/DotnetProjectBoilerplate.Core/DotnetProjectBoilerplate.Core.csproj" />
+  </ItemGroup>
+
 </Project>
