feat/2 - добавил use-cases

--- a/src/Presentation/DotnetProjectBoilerplate.ConsoleApp/DotnetProjectBoilerplate.ConsoleApp.csproj
+++ b/src/Presentation/DotnetProjectBoilerplate.ConsoleApp/DotnetProjectBoilerplate.ConsoleApp.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../../Core/DotnetProjectBoilerplate.Application/DotnetProjectBoilerplate.Application.csproj" />
     <ProjectReference Include="../../Core/DotnetProjectBoilerplate.Core/DotnetProjectBoilerplate.Core.csproj" />
   </ItemGroup>
 
