feat/3 - добавил тесты

--- a/tests/DotnetProjectBoilerplate.UnitTests/DotnetProjectBoilerplate.UnitTests.csproj
+++ b/tests/DotnetProjectBoilerplate.UnitTests/DotnetProjectBoilerplate.UnitTests.csproj
@@ -15,6 +15,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../../src/Core/DotnetProjectBoilerplate.Application/DotnetProjectBoilerplate.Application.csproj" />
+    <ProjectReference Include="../../src/Core/DotnetProjectBoilerplate.Core/DotnetProjectBoilerplate.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
